# Qt_Remote

./: .gitignore  Qt_Remote.slnx
Qt_Remote/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  CommandHandler.cpp  CommandHandler.h  DeviceServer.cpp  DeviceServer.h  NetworkData.h  Qt_Remote.cpp  Qt_Remote.h  Qt_Remote.qrc  Qt_Remote.ui  Qt_Remote.vcxproj  Qt_Remote.vcxproj.filters  main.cpp
